# roller_coster

./: CMakeLists.txt  cahierDesCharge.txt  cmake_install.cmake  main.cpp  readme.md
assets/3D_models/Landscape/: environnement.mtl
assets/3D_models/Sky/: sky.mtl
assets/3D_models/Vehicle/: wagon.mtl
glimac/: Makefile  cmake_install.cmake
glimac/include/glimac/: Geometry.hpp
include/: Camera.hpp  Drawable.hpp  Environnement.hpp  FlatGround.hpp  FreeFlyCamera.hpp  GL_global.hpp  Ground.hpp  RollPath.hpp  Sky.hpp  TrackballCamera.hpp  Vehicle.hpp  World.hpp
shaders/: Environnement.fs.glsl  Environnement.vs.glsl  FlatGround.fs.glsl  RollPath.fs.glsl  Vehicle.fs.glsl  sky.fs.glsl
src/: Drawable.hpp  Environnement.cpp  FlatGround.cpp  FreeFlyCamera.cpp  GL_global.cpp  Ground.cpp  RollPath.cpp  TrackballCamera.cpp  Vehicle.cpp  World.cpp  sky.cpp
